[package]
name = "toggl-utils"
version = "0.2.0"
authors = ["Emanuel Borsboom"]
edition = "2018"

[dependencies]
anyhow = "^1.0"
chrono = "^0.4"
derive_more = "^0.99"
dotenv = "^0.15.0"
env_logger = "^0.8"
log = "^0.4"
prettytable-rs = "^0.8"
serde = "^1.0"
serde_yaml = "^0.8"
structopt = "^0.3"
toggl_rs = { git = "https://github.com/borsboom/toggl-rs.git", rev = "354a73a71e33d5c54dbf942b5de4ce08f43adc7b" }
